fix nav bar and collapse menu

--- a/mod3-solution/css/styles.css
+++ b/mod3-solution/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   font-size: 16px;
   color: #fff;
   background-color: #61122f;
@@ -7,12 +7,11 @@ body {
 
 /** HEADER **/
 #header-nav {
-  background-color: #A0A0A0;
   border-radius: 0;
   border: 0;
 }
-.navbar-brand {
-  padding-top: 25px;
+/*.navbar-brand {
+  padding-top: 25px;*/
 }
 .navbar-brand h1 { /* Restaurant name */
   color: #000;
@@ -21,7 +20,8 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
-}
+} 
+
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
